--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,9 +3,11 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Project</h2>
+                    <p>You can check my projects</p>
+                    <a href="https://secure-plateau-53161.herokuapp.com/" class="btn btn-default btn-lg">Alien Attack Game</a>
+                    <a href="hhttps://secure-atoll-92904.herokuapp.com/" class="btn btn-default btn-lg">MoviePedia</a>
+                    <a href="https://pawsplay-hassan.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
                 </div>
             </div>
         </div>
