--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,9 +5,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Project</h2>
                     <p>You can check my projects</p>
-                    <a href="https://secure-plateau-53161.herokuapp.com/" class="btn btn-default btn-lg">Alien Attack Game</a>
-                    <a href="hhttps://secure-atoll-92904.herokuapp.com/" class="btn btn-default btn-lg">MoviePedia</a>
-                    <a href="https://pawsplay-hassan.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
+                    <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg">Alien Attack</a>
+                    <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg">MoviePedia</a>
+                    <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
+                      <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
                 </div>
             </div>
         </div>
