--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -293,7 +293,9 @@ a:focus {
   -moz-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
-
+#logo{
+  height: 250px;
+}
 .btn-default {
   border: 1px solid {{ site.color.links }};
   color: {{ site.color.links }};
