--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,10 +5,25 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Project</h2>
                     <p>You can check my projects</p>
-                    <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg">Alien Attack</a>
+
+                        <ul class="list-inline banner-social-buttons">
+                            <li>
+                                <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">Alien Attack</span></a>
+                            </li>
+                            <li>
+                                <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">MoviePedia</span></a>
+                            </li>
+                            <li>
+                                <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">Paws and Play</span></a>
+                            </li>
+                            <li>
+                                <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
+                            </li>
+                        </ul>
+                    <!-- <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg">Alien Attack</a>
                     <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg">MoviePedia</a>
                     <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
-                      <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg">Paws and Play</a>
+                    <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg">Pocket Fit</a> -->
                 </div>
             </div>
         </div>
