--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"><img src="/img/logo.png" alt="logo" class="logo"></h1>
-                        <p><i>{{ site.slogan }}</i></p>
+                        <h1 class="brand-heading logo-margin"><img src="/img/logo.png" alt="logo" class="logo"></h1>
+                        <p class="slogan"><i>{{ site.slogan }}</i></p>
                         <p class="intro-text">{{ site.description }}<br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
