--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,13 @@
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section>
+<!-- About Section -->
+<section id="about" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>About Hassan Iskaf</h2>
+      <p> I moved to London several years ago to study my Master’s in Information Systems and Technology at <a href="https://www.city.ac.uk/">City University</a> and then I did a web development course at <a href="https://generalassemb.ly/">General Assembly</a> in London. <p>Over the last three months I have learned a huge amount which has complemented my previous studies.
+      </p>
+      <p>I am looking for a career path that will enable me to continue this learning process and develop further skills.
+      </p>
+    </p>
+  </div>
+</div>
+</section>
