--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,8 +3,8 @@
   <div class="download-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>Project</h2>
-        <p>You can check my projects</p>
+        <h2>Projects</h2>
+        <p>Here is a list of my lastest projects</p>
 
         <ul class="list-inline banner-social-buttons">
           <li>
