--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
     {% include about.html %}
     {% include download.html %}
     {% include project-one.html %}
+    {% include project-two.html %}
+    {% include project-three.html %}
+    {% include project-four.html %}
     {% include contact.html %}
     {% include map.html %}
     {% include footer.html %}
