--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -1,11 +1,12 @@
 <!-- Download Section -->
 <section id="projectOne" class="content-section text-center">
-  <div class="download-section">
+  <div class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Alien Attack</h2>
-        <p>Here is a list of my lastest projects</p>
+        <p class="intro-text"> </p>
             <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
+
       </div>
     </div>
   </div>
