--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -272,6 +272,21 @@ a:focus {
   -o-background-size: cover;
 }
 
+.project-section{
+  {
+    width: 100%;
+    padding: 50px 0;
+    color: #fff;
+    /*background: url(/img/downloads-bg.jpg) no-repeat center center scroll;*/
+    background-color: {{ site.color.primary-dark }};
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+  }
+}
+
+
 #map {
   width: 100%;
   height: 200px;
@@ -283,7 +298,7 @@ a:focus {
     padding-top: 200px;
   }
 
-  .download-section {
+  .download-section, .project-section {
     padding: 100px 0;
   }
 
