--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -1,9 +1,11 @@
 <!-- Download Section -->
 <section id="projectThree" class="content-section text-center">
-  <div class="download-section">
+  <div class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
+        <p class="intro-text"> </p>
+
             <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
       </div>
     </div>
