--- a/_includes/project-two.html
+++ b/_includes/project-two.html
@@ -1,9 +1,11 @@
 <!-- Download Section -->
 <section id="projectTwo" class="content-section text-center">
-  <div class="download-section">
+  <div class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>MoviePedia</h2>
+        <p class="intro-text"> </p>
+
         <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
       </div>
     </div>
