--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -4,8 +4,13 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Alien Attack</h2>
-        <p class="intro-text"> </p>
-            <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
+        <p class="intro-text">I had a week to a build an interactive game using HTML, CSS, SCSS, JavaScript and jQuery. At first I had to come with an idea for the project, and after a discuss with the T.A’s I decided to create a duck hunt style game called Alien Attack.
+          
+          I started with planning and pseudocoding the process. Then I began writing the functionality and build the logic of the game. After that, I started building the CSS and giving the game a cool modern look.
+
+          This project was super beneficial for me since it was the first project I create by myself and it was fun.
+        </p>
+        <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
 
       </div>
     </div>
