--- a/_includes/project-four.html
+++ b/_includes/project-four.html
@@ -4,9 +4,9 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Pocket Fit</h2>
-        <p class="intro-text">I had to build my first full-stack app using Ruby on Rails and angularJs. I created a gym app called “pocketfit”.
-
-          For this last project, I decided to create an app dedicated to fitness. First of all, I planned my week using Trello to arrange my schedule and deadlines. Then after that, the pseudocoding, I used justinmind wireframing software to design the user interface and layouts. Then, I started creating the database models to build the API. Once done, I started building my UI,  a cool way to select and filter exercises combining group muscles and intensity level. For the first time ever, I used Adobe Photoshop to help me create a great muscles groups selector, a new skill I am happy to take. In addition, I used tachyons framework to create the styling, and Slick to create some slick carousels.
+        <p class="intro-text">I had to build my first full-stack app using Ruby on Rails and angularJs. I created a gym app called “pocketfit”.<br>
+          For this last project, I decided to create an app dedicated to fitness. First of all, I planned my week using Trello to arrange my schedule and deadlines. Then after that, the pseudocoding, I used justinmind wireframing software to design the user interface and layouts. Then, I started creating the database models to build the API.<br><br>
+          Once done, I started building my UI,  a cool way to select and filter exercises combining group muscles and intensity level. For the first time ever, I used Adobe Photoshop to help me create a great muscles groups selector, a new skill I am happy to take. In addition, I used tachyons framework to create the styling, and Slick to create some slick carousels.
         </p>
 
         <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
