--- a/_includes/project-two.html
+++ b/_includes/project-two.html
@@ -4,8 +4,7 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>MoviePedia</h2>
-        <p class="intro-text">I had to build my first full-stack app using Node.js and Express. I created a movie search app called MoviePedia.
-
+        <p class="intro-text">I had to build my first full-stack app using Node.js and Express. I created a movie search app called MoviePedia.<br><br>
           For this project, I had to create an app which includes two models at least, with user authentication. I also used an external API for movies called OMDB. Following the first project process, I used balsamiq software to create the wireframes and decide on the user interface and navigation. In addition, I used the Bootstrap framework.
         </p>
 
