--- a/_includes/download.html
+++ b/_includes/download.html
@@ -8,16 +8,16 @@
 
         <ul class="list-inline banner-social-buttons">
           <li>
-            <a href="#projectOne" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
+            <a href="#projectOne" class="btn btn-reference btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
           </li>
           <li>
-            <a href="#projectTwo" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
+            <a href="#projectTwo" class="btn btn-reference btn-lg"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
           </li>
           <li>
-            <a href="#projectThree" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
+            <a href="#projectThree" class="btn btn-reference btn-lg"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
           </li>
           <li>
-            <a href="#projectFour" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
+            <a href="#projectFour" class="btn btn-reference btn-lg"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
           </li>
         </ul>
       </div>
