--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -4,8 +4,8 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
-        <p class="intro-text">I had to build a full-stack app using Node.js and angularJs with a group of four.
-          From the start, our group had a meeting to brainstorm and discuss the potential ideas. I offered couple of ideas but we ended up going with a dog walking app because, oh well, who doesn't like dogs. After receiving the confirmation from the TA’s, we allocated roles for each one of us based on our strengths.
+        <p class="intro-text">I had to build a full-stack app using Node.js and angularJs with a group of four.<br>
+          From the start, our group had a meeting to brainstorm and discuss the potential ideas. I offered couple of ideas but we ended up going with a dog walking app because, oh well, who doesn't like dogs. After receiving the confirmation from the TA’s, we allocated roles for each one of us based on our strengths.<br><br>
 
           I decided to work on the front-end using angularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During pair programming, I got involved in building the database schemas, navigation and layouts of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used git to share my own work with the team.
         </p>
