--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -332,17 +332,17 @@ a:focus {
 }
 
 .btn-reference {
-  border: 1px solid {{ site.color.reference }};
-  color: {{ site.color.reference }};
+  border: 1px solid {{ site.color.relinks }};
+  color: {{ site.color.relinks }};
   background-color: transparent;
 }
 
 .btn-reference:hover,
 .btn-reference:focus {
-  border: 1px solid {{ site.color.reference }};
+  border: 1px solid {{ site.color.relinks }};
   outline: 0;
   color: {{ site.color.primary-dark }};
-  background-color: {{ site.color.reference }};
+  background-color: {{ site.color.relinks }};
 }
 
 ul.banner-social-buttons {
