--- a/_includes/download.html
+++ b/_includes/download.html
@@ -4,7 +4,9 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Projects</h2>
-        <p>Here is a list of my lastest projects</p>
+        <p class="intro-text">I have studied a lot in this domain, but I did not feel that I came out with a set of technical and transferrable skills that I could apply in a workplace. General Assembly course has filled the gap between my academic knowledge and my practical skill set. I particularly enjoyed learning how to build a website from scratch under time pressure. My improved coding skills now provide me with a strong foundation to further develop my knowledge and skills.
+        </p>
+        <p class="intro-text">Here is a list of my lastest projects</p>
 
         <ul class="list-inline banner-social-buttons">
           <li>
