--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -286,6 +286,18 @@ a:focus {
   }
 }
 
+.parallex-section {
+  width: 100%;
+  padding: 50px 0;
+  color: #fff;
+  background: url(/img/parallex-bg.jpg) no-repeat center center scroll;
+  background-color: {{ site.color.primary-dark }};
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
 
 #map {
   width: 100%;
