--- a/_includes/project-four.html
+++ b/_includes/project-four.html
@@ -9,7 +9,7 @@
           Once done, I started building my UI,  a cool way to select and filter exercises combining group muscles and intensity level. For the first time ever, I used Adobe Photoshop to help me create a great muscles groups selector, a new skill I am happy to take. In addition, I used tachyons framework to create the styling, and Slick to create some slick carousels.
         </p>
 
-        <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
+        <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
       </div>
     </div>
   </div>
