--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -10,7 +10,7 @@
           I decided to work on the front-end using angularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During pair programming, I got involved in building the database schemas, navigation and layouts of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used git to share my own work with the team.
         </p>
 
-        <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
+        <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
       </div>
     </div>
   </div>
