--- a/_includes/project-two.html
+++ b/_includes/project-two.html
@@ -8,7 +8,7 @@
           For this project, I had to create an app which includes two models at least, with user authentication. I also used an external API for movies called OMDB. Following the first project process, I used balsamiq software to create the wireframes and decide on the user interface and navigation. In addition, I used the Bootstrap framework.
         </p>
 
-        <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
+        <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
       </div>
     </div>
   </div>
