--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -10,7 +10,7 @@
 
           This project was super beneficial for me since it was the first project I create by myself and it was fun.
         </p>
-        <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
+        <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
 
       </div>
     </div>
