--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     {% include project-four.html %}
     {% include contact.html %}
     {% include map.html %}
+    {% include parallex.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
