--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,13 @@
     {% include header.html %}
     {% include about.html %}
     {% include download.html %}
+    {% include alien.html %}
     {% include project-one.html %}
+    {% include movie.html %}
     {% include project-two.html %}
+    {% include paws.html %}
     {% include project-three.html %}
+    {% include pocket.html %}
     {% include project-four.html %}
     {% include parallex.html %}
     {% include contact.html %}
