--- a/_includes/paws.html
+++ b/_includes/paws.html
@@ -1,6 +1,6 @@
 <!-- Download Section -->
 <section id="download" class="content-section text-center">
-  <div class="parallex-section paws">
+  <div class="paws-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
       </div>
