adding london eye

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
+                    <img src="/img/londonEye.jpg" alt="logo" class="lEye">
                 </div>
             </div>
         </div>
