--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
                     <div class="col-md-8 col-md-offset-2 relative">
                         <h1 class="brand-heading logo-margin"><img src="/img/logo.png" alt="logo" class="logo"></h1>
                         <p class="slogan"><i>{{ site.slogan }}</i></p>
-                        <p class="intro-text">{{ site.description }}<br>
+                        <p class="intro-text">{{ site.description }}</p><br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
