--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,13 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 relative">
+                    <div class="col-md-8 col-md-offset-2 ">
                         <h1 class="brand-heading logo-margin"><img src="/img/logo.png" alt="logo" class="logo"></h1>
                         <p class="slogan"><i>{{ site.slogan }}</i></p>
                         <p class="intro-text">{{ site.description }}</p><br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
-                        <img src="/img/londonEye.jpg" alt="logo" class="lEye">
                     </div>
                 </div>
             </div>
