--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -481,3 +481,10 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+.skill{
+  color: pink;
+}
+.highlight{
+  color: lightgreen;
+}
