--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -4,9 +4,9 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Alien Attack</h2>
-        <p class="intro-text">I had a week to a build an interactive game using HTML, CSS, SCSS, JavaScript and jQuery. At first I had to come with an idea for the project, and after a discuss with the T.A’s I decided to create a duck hunt style game called Alien Attack.<br><br>
+        <p class="intro-text">I had a week to a build an interactive game using <span class="highlight">HTML, CSS, SCSS, JavaScript</span> and <span class="highlight">jQuery</span>. At first I had to come with an idea for the project, and after a discuss with the T.A’s I decided to create a duck hunt style game called Alien Attack.<br><br>
 
-          I started with planning and pseudocoding the process. Then I began writing the functionality and build the logic of the game. After that, I started building the CSS and giving the game a cool modern look.<br><br>
+          I started with <span class="highlight">planning and pseudocoding </span>the process. Then I began writing the functionality and build the logic of the game. After that, I started building the CSS and giving the game a cool modern look.<br><br>
 
           This project was super beneficial for me since it was the first project I create by myself and it was fun.
         </p>
