--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -4,10 +4,10 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
-        <p class="intro-text">I had to build a full-stack app using Node.js and angularJs with a group of four.<br>
-          From the start, our group had a meeting to brainstorm and discuss the potential ideas. I offered couple of ideas but we ended up going with a dog walking app because, oh well, who doesn't like dogs. After receiving the confirmation from the TA’s, we allocated roles for each one of us based on our strengths.<br><br>
+        <p class="intro-text">I had to build a full-stack app using <span class="highlight">Node.js and AngularJs</span> with a group of four.<br>
+          From the start, our group had a meeting to <span class="skill">brainstorm and discuss</span> the potential ideas. I offered couple of ideas and we ended up going with a dog walking app because, oh well, who doesn't like dogs. After receiving the confirmation from the TA’s, we allocated roles for each one of us based on our strengths.<br><br>
 
-          I decided to work on the front-end using angularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During pair programming, I got involved in building the database schemas, navigation and layouts of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used git to share my own work with the team.
+          I decided to work on the front-end using AngularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During <span class="skill">pair programming</span>, I got involved in building the <span class="skill">database schemas, navigation and layouts</span> of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
         </p>
 
         <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
