--- a/_includes/project-two.html
+++ b/_includes/project-two.html
@@ -4,8 +4,8 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>MoviePedia</h2>
-        <p class="intro-text">I had to build my first full-stack app using Node.js and Express. I created a movie search app called MoviePedia.<br><br>
-          For this project, I had to create an app which includes two models at least, with user authentication. I also used an external API for movies called OMDB. Following the first project process, I used balsamiq software to create the wireframes and decide on the user interface and navigation. In addition, I used the Bootstrap framework.
+        <p class="intro-text">I had to build my first full-stack app using<span class="hightlight"> Node.js and Express</span>. I created a movie search app called MoviePedia.<br><br>
+          For this project, I had to create an app which includes two models at least, with <span class="skill">user authentication</span>. I also used an external API for movies called OMDB. Following the first project process, I used <span class="skill">Balsamiq</span> online software to create the wireframes and decide on the user interface and navigation. In addition, I used the  <span class="skill">Bootstrap</span> framework.
         </p>
 
         <a href="https://movie-pedia.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">MoviePedia</span></a>
