--- a/_includes/alien.html
+++ b/_includes/alien.html
@@ -1,5 +1,5 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
+<section id="alien" class="content-section text-center">
   <div class="alien-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
