--- a/_includes/movie.html
+++ b/_includes/movie.html
@@ -1,5 +1,5 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
+<section id="movie" class="content-section text-center">
   <div class="movie-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
