--- a/_includes/parallex.html
+++ b/_includes/parallex.html
@@ -1,5 +1,5 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
+<section id="keyboard" class="content-section text-center">
   <div class="keyboard-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
