--- a/_includes/paws.html
+++ b/_includes/paws.html
@@ -1,5 +1,5 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
+<section id="paws" class="content-section text-center">
   <div class="paws-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
