--- a/_includes/pocket.html
+++ b/_includes/pocket.html
@@ -1,5 +1,5 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
+<section id="pocket" class="content-section text-center">
   <div class="pocket-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
