--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <!-- About Section -->
-<section id="about" class="container content-section text-center">
-  <div class="row">
+<section class="container content-section text-center">
+  <div id="about" class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2>About Hassan Iskaf</h2>
       <p> I moved to London several years ago to study my Master’s in Information Systems and Technology at <a href="https://www.city.ac.uk/">City University</a> and then I did a web development course at <a href="https://generalassemb.ly/">General Assembly</a> in London. <p>Over the last three months I have learned a huge amount which has complemented my previous studies.
