--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -1,6 +1,6 @@
 <!-- Download Section -->
-<section id="projectOne" class="content-section text-center">
-  <div class="project-section">
+<section  class="content-section text-center">
+  <div id="projectOne" class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Alien Attack</h2>
