--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -1,6 +1,6 @@
 <!-- Download Section -->
-<section id="projectThree" class="content-section text-center">
-  <div class="project-section">
+<section  class="content-section text-center">
+  <div id="projectThree" class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
@@ -10,7 +10,7 @@
           I decided to work on the front-end using AngularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During <span class="skill">pair programming</span>, I got involved in building the <span class="skill">database schemas, navigation and layouts</span> of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
         </p>
 
-        <a href="https://paws-and-play.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
+        <a href="https://pawsplay-hassan.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
       </div>
     </div>
   </div>
