--- a/_includes/project-two.html
+++ b/_includes/project-two.html
@@ -1,6 +1,6 @@
 <!-- Download Section -->
-<section id="projectTwo" class="content-section text-center">
-  <div class="project-section">
+<section class="content-section text-center">
+  <div id="projectTwo" class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>MoviePedia</h2>
