--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,6 +1,6 @@
 <!-- Download Section -->
-<section id="download" class="content-section text-center">
-  <div class="project-section">
+<section  class="content-section text-center">
+  <div id="download" class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Projects</h2>
