--- a/_includes/download.html
+++ b/_includes/download.html
@@ -1,10 +1,10 @@
 <!-- Download Section -->
 <section  class="content-section text-center">
-  <div id="download" class="project-section">
+  <div id="project" class="project-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Projects</h2>
-        <p class="intro-text">I have studied a lot in this domain, but I did not feel that I came out with a set of technical and transferrable skills that I could apply in a workplace. General Assembly course has filled the gap between my academic knowledge and my practical skill set. I particularly enjoyed learning how to build a website from scratch under time pressure. My improved coding skills now provide me with a strong foundation to further develop my knowledge and skills.
+        <p class="intro-text">Although I have studied a lot in this area, I did not feel that I had a set of technical and transferrable skills that I could apply in a workplace. The General Assembly course has filled the gap between my academic knowledge and my practical skill set. I particularly enjoyed learning how to build a website from scratch under time pressure. My improved coding skills now provide me with a strong foundation to further develop my knowledge and skills.
         </p>
         <p class="intro-text">Here is a list of my lastest projects</p>
 
