--- a/_includes/project-four.html
+++ b/_includes/project-four.html
@@ -4,11 +4,10 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Pocket Fit</h2>
-        <p class="intro-text">I had to build my first full-stack app using  <span class="highlight">Ruby on Rails and AngularJs</span>. I created a gym app called “Pocket Fit”.<br>
-          For this last project, I decided to create an app dedicated to fitness. First of all, I planned my week using <span class="skill">Trello</span> to arrange my schedule and deadlines. Then after that, <span class="skill">the pseudocoding</span>, I used <span class="skill">Justinmind</span> wireframing software to design the user interface and layouts. Then, I started creating the database models to build the API.<br><br>
-          Once done, I started building my UI,  a cool way to select and filter exercises combining group muscles and intensity level. For the first time ever, I used <span class="skill">Adobe Photoshop</span> to help me create a great muscles groups selector, a new skill I am happy to take. In addition, I used <span class="skill">Tachyons framework</span> to create the styling, and <span class="skill">Slick</span> to create some slick carousels.
+        <p class="intro-text">I had to build a full-stack app using <span class="highlight">Ruby on Rails and AngularJs</span>. I decided to create a gym app called “Pocket Fit”.
+          This app was dedicated to fitness. First of all, I planned my week using <span class="skill">Trello</span> to arrange my schedule and deadlines. After completing <span class="skill">the pseudocoding</span>, I used Justinmind wireframing software to design the user interface and layout. I then started creating the database models to build the API.<br><br>
+          Once I had completed this, I started building my UI, which comprised a cool way to select and filter exercises by combining group muscles and intensity level. For the first time, I used <span class="skill">Adobe Photoshop</span> which allowed me to create a muscle group selector. Finally, I used a <span class="skill">Tachyons</span> framework to create the styling, and <span class="skill">Slick</span> to create carousels.
         </p>
-
         <a href="https://pocket-fit.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Pocket Fit</span></a>
       </div>
     </div>
