--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -4,10 +4,11 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
-        <p class="intro-text">I had to build a full-stack app using <span class="highlight">Node.js and AngularJs</span> with a group of four.<br>
-          From the start, our group had a meeting to <span class="skill">brainstorm and discuss</span> the potential ideas. I offered couple of ideas and we ended up going with a dog walking app because, oh well, who doesn't like dogs. After receiving the confirmation from the TA’s, we allocated roles for each one of us based on our strengths.<br><br>
+        <p class="intro-text">We had to build a full-stack app using <span class="highlight">Node.js and AngularJs</span> in a group of four.
+        Our group began the process with a <span class="skill">brainstorming</span> session to discuss any potential ideas. I put forward several ideas however, in the end we decided to develop a dog walking app because firstly, who doesn't like dogs and secondly, it would enable us to introduce some interesting functionality elements. After receiving approval from the Teaching Assistants, we allocated roles based on our relative strengths.<br><br>
 
-          I decided to work on the front-end using AngularJs. Although, I offered a big help when it’s needed and never hesitate to ask for one. During <span class="skill">pair programming</span>, I got involved in building the <span class="skill">database schemas, navigation and layouts</span> of the user interface since I have some previous skills in information architect from my Master’s degree. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
+        I decided to work on the front-end elements using angularJs. As part of a team, I not only worked on my elements but also helped other team members when they needed help and I learned how to ask for help when needed. During <span class="skill">pair programming</span>, I was involved in building the <span class="skill">database schemas, navigation and designing</span> the layout of the user interface, as I had previous experience in Information Architecture from my Master’s. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
+
         </p>
 
         <a href="https://pawsplay-hassan.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Paws and Play</span></a>
