--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,10 @@
   <div id="about" class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2>About Hassan Iskaf</h2>
-      <p> I moved to London several years ago to study my Master’s in Information Systems and Technology at <a href="https://www.city.ac.uk/">City University</a> and then I did a web development course at <a href="https://generalassemb.ly/">General Assembly</a> in London. <p>Over the last three months I have learned a huge amount which has complemented my previous studies.
+      <p> I grew up in Lebanon, where technology is not as advanced as here. I was always fascinated by the power of technology and its potential to change people's lives. This led me to study my undergraduate degree in Information and Communication Technologies and then my Master’s in Information Systems and Technology at <a href="https://www.city.ac.uk/">City University</a>. Although these courses provided me with academic insight, I felt I lacked the practical skills to work in the sector; I therefore completed a web development course at <a href="https://generalassemb.ly/">General Assembly</a>.<br> This taught me a huge variety of skills, which complemented my existing studies. I am now looking for a career path that will enable me to continue this learning process and develop further skills.
+        <p>I am looking for a career path that will enable me to continue this learning process and develop further skills.
+        </p>
       </p>
-      <p>I am looking for a career path that will enable me to continue this learning process and develop further skills.
-      </p>
-    </p>
+    </div>
   </div>
-</div>
 </section>
