--- a/_includes/project-one.html
+++ b/_includes/project-one.html
@@ -4,11 +4,10 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Alien Attack</h2>
-        <p class="intro-text">I had a week to a build an interactive game using <span class="highlight">HTML, CSS, SCSS, JavaScript</span> and <span class="highlight">jQuery</span>. At first I had to come with an idea for the project, and after a discuss with the T.A’s I decided to create a duck hunt style game called Alien Attack.<br><br>
+        <p class="intro-text">I had a week to a build an interactive game using <span class="highlight">HTML, CSS, SCSS, JavaScript</span> and <span class="highlight">jQuery</span>. I first had to come up with an idea for the project. After a discussion with the Teaching Assistant, I decided to create a ‘duck hunt’ style game called Alien Attack.<br><br>
 
-          I started with <span class="skill">planning and pseudocoding </span>the process. Then I began writing the functionality and build the logic of the game. After that, I started building the CSS and giving the game a cool modern look.<br><br>
-
-          This project was super beneficial for me since it was the first project I create by myself and it was fun.
+        I started with <span class="skill">planning and pseudocoding </span>the process. I then began developing the functionality and building the logic of the game. After that, I then started building the CSS and giving the game a ‘cool’ and ‘modern’ look.<br><br>
+        This project was extremely insightful for me, as it was the first project that I created on my own.
         </p>
         <a href="https://alienattack.herokuapp.com/" class="btn btn-default btn-lg" target="_blank"><i class="fa-fw"></i> <span class="network-name">Alien Attack</span></a>
 
