--- a/_includes/project-four.html
+++ b/_includes/project-four.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Pocket Fit</h2>
-        <p class="intro-text">I had to build a full-stack app using <span class="highlight">Ruby on Rails and AngularJs</span>. I decided to create a gym app called “Pocket Fit”.
+        <p class="intro-text">I had to build a full-stack app using <span class="highlight">Ruby on Rails and AngularJS</span>. I decided to create a gym app called “Pocket Fit”.
           This app was dedicated to fitness. First of all, I planned my week using <span class="skill">Trello</span> to arrange my schedule and deadlines. After completing <span class="skill">the pseudocoding</span>, I used Justinmind wireframing software to design the user interface and layout. I then started creating the database models to build the API.<br><br>
           Once I had completed this, I started building my UI, which comprised a cool way to select and filter exercises by combining group muscles and intensity level. For the first time, I used <span class="skill">Adobe Photoshop</span> which allowed me to create a muscle group selector. Finally, I used a <span class="skill">Tachyons</span> framework to create the styling, and <span class="skill">Slick</span> to create carousels.
         </p>
