--- a/_includes/project-three.html
+++ b/_includes/project-three.html
@@ -4,10 +4,10 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2>Paws and Play</h2>
-        <p class="intro-text">We had to build a full-stack app using <span class="highlight">Node.js and AngularJs</span> in a group of four.
+        <p class="intro-text">We had to build a full-stack app using <span class="highlight">Node.js and AngularJS</span> in a group of four.
         Our group began the process with a <span class="skill">brainstorming</span> session to discuss any potential ideas. I put forward several ideas however, in the end we decided to develop a dog walking app because firstly, who doesn't like dogs and secondly, it would enable us to introduce some interesting functionality elements. After receiving approval from the Teaching Assistants, we allocated roles based on our relative strengths.<br><br>
 
-        I decided to work on the front-end elements using angularJs. As part of a team, I not only worked on my elements but also helped other team members when they needed help and I learned how to ask for help when needed. During <span class="skill">pair programming</span>, I was involved in building the <span class="skill">database schemas, navigation and designing</span> the layout of the user interface, as I had previous experience in Information Architecture from my Master’s. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
+        I decided to work on the front-end elements using AngularJS. As part of a team, I not only worked on my elements but also helped other team members when they needed help and I learned how to ask for help when needed. During <span class="skill">pair programming</span>, I was involved in building the <span class="skill">database schemas, navigation and designing</span> the layout of the user interface, as I had previous experience in Information Architecture from my Master’s. Finally, as a part of the group, I used <span class="skill">Git</span> to share my own work with the team.
 
         </p>
 
